--- a/demo/src/main/resources/templates/chart.html
+++ b/demo/src/main/resources/templates/chart.html
@@ -11,11 +11,17 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container1">
     <h2 align="center">Data Graph</h2>
 
-    <div id="container"
-         style="width: 550px; height: 400px; margin: 0 auto"></div>
+    <div id="container1"
+         style="width: 700px; height: 400px; margin: 0 auto"></div>
+</div>
+<div class="container2">
+    <h2 align="center">Data Graph</h2>
+
+    <div id="container2"
+         style="width: 700px; height: 400px; margin: 0 auto"></div>
 </div>
 <script
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -26,7 +32,7 @@
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script th:inline="javascript">
     $(function(){
-    Highcharts.chart('container', {
+    let chart1 = Highcharts.chart('container1', {
         chart: {
             type: 'column'
         },
@@ -42,7 +48,7 @@
         },
         yAxis: {
             min: 0,
-            max:100,
+            max:25,
             title: {
                 text: 'Counter'
             }
@@ -50,7 +56,7 @@
         tooltip: {
             headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
             pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-            '<td style="padding:0"><b>{point.y:.1f} K</b></td></tr>',
+            '<td style="padding:0"><b>{point.y}</b></td></tr>',
             footerFormat: '</table>',
             shared: true,
             useHTML: true
@@ -66,6 +72,41 @@
             data: [[${counter}]]
         }]
       });
+
+      let chart2 = Highcharts.chart('container2', {
+    chart: {
+        plotBackgroundColor: null,
+        plotBorderWidth: null,
+        plotShadow: false,
+        type: 'pie'
+    },
+    title: {
+        text: 'Tags'
+    },
+    tooltip: {
+        pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+    },
+    accessibility: {
+        point: {
+            valueSuffix: '%'
+        }
+    },
+    plotOptions: {
+        pie: {
+            allowPointSelect: true,
+            cursor: 'pointer',
+            dataLabels: {
+                enabled: true,
+                format: '<b>{point.name}</b>: {point.percentage:.1f} %'
+            }
+        }
+    },
+    series: [{
+        name: 'Tag',
+        colorByPoint: true,
+        data: [[${try}]]
+    }]
+});
     });
 
 </script>
