--- a/demo/src/main/resources/templates/chart.html
+++ b/demo/src/main/resources/templates/chart.html
@@ -12,16 +12,27 @@
 </head>
 <body>
 <div class="container1">
-    <h2 align="center">Data Graph</h2>
-
     <div id="container1"
-         style="width: 700px; height: 400px; margin: 0 auto"></div>
+         style="width: 50%; height: 400px; margin-bottom: 25px; float: left"></div>
 </div>
 <div class="container2">
-    <h2 align="center">Data Graph</h2>
-
     <div id="container2"
-         style="width: 700px; height: 400px; margin: 0 auto"></div>
+         style="width: 50%; height: 400px; margin-bottom: 25xp; float: right"></div>
+</div>
+<div class="container" style="width: 90%; margin: 0 auto">
+    <table class="table table-bordered table-striped" style="width: 100%;">
+        <thead class="thead-dark">
+        <tr>
+            <th th:each="header: ${headers}" class="column-title" th:text="${header}"></th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="row: ${rows}" id="tablerow">
+            <td th:each="header: ${headers}" th:text="${row.get(header)}"></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 <script
         src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -34,6 +45,7 @@
     $(function(){
     let chart1 = Highcharts.chart('container1', {
         chart: {
+            backgroundColor: '#f9f9f9',
             type: 'column'
         },
         title: {
@@ -75,6 +87,7 @@
 
       let chart2 = Highcharts.chart('container2', {
     chart: {
+        backgroundColor: '#f9f9f9',
         plotBackgroundColor: null,
         plotBorderWidth: null,
         plotShadow: false,
@@ -108,6 +121,8 @@
     }]
 });
     });
+
+
 
 </script>
 
