--- a/demo/src/main/resources/templates/chart.html
+++ b/demo/src/main/resources/templates/chart.html
@@ -17,7 +17,26 @@
 </div>
 <div class="container2">
     <div id="container2"
-         style="width: 50%; height: 400px; margin-bottom: 25xp; float: right"></div>
+         style="width: 50%; height: 400px; margin-bottom: 25px; float: right"></div>
+</div>
+<div class="container3">
+    <div id="container3"
+         style="width: 100%; height: 400px; margin-bottom: 25px; float: right"></div>
+</div>
+<div class="container" style="width: 90%; margin: 0 auto">
+    <table class="table table-bordered table-striped" style="width: 100%;">
+        <thead class="thead-dark">
+        <tr>
+            <th th:each="header: ${headers}" class="column-title" th:text="${header}"></th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:each="row: ${rows}" id="tablerow2">
+            <td th:each="header: ${headers}" th:text="${row.get(header)}"></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 <div class="container" style="width: 90%; margin: 0 auto">
     <table class="table table-bordered table-striped" style="width: 100%;">
@@ -42,86 +61,151 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script th:inline="javascript">
-    $(function(){
-    let chart1 = Highcharts.chart('container1', {
-        chart: {
-            backgroundColor: '#f9f9f9',
-            type: 'column'
-        },
-        title: {
-            text: 'Tags Bar Chart'
-        },
-        subtitle: {
-            text: 'Tags counter in a glance'
-        },
-        xAxis: {
-            categories: [[${tags}]],
-            crosshair: true
-        },
-        yAxis: {
-            min: 0,
-            max:25,
+    $(function () {
+        let chart1 = Highcharts.chart('container1', {
+            chart: {
+                type: 'column'
+            },
             title: {
-                text: 'Counter'
-            }
-        },
-        tooltip: {
-            headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
-            pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-            '<td style="padding:0"><b>{point.y}</b></td></tr>',
-            footerFormat: '</table>',
-            shared: true,
-            useHTML: true
-        },
-        plotOptions: {
-            column: {
-                pointPadding: 0.2,
-                borderWidth: 0
-            }
-        },
-        series: [{
-            name: 'Tags',
-            data: [[${counter}]]
-        }]
-      });
+                text: 'Tags Bar Chart'
+            },
+            xAxis: {
+                categories: [[${tags}]],
+                crosshair: true
+            },
+            yAxis: {
+                min: 0,
+                max: 20,
+                title: {
+                    text: 'Counter'
+                }
+            },
+            tooltip: {
+                headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+                pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+                    '<td style="padding:0"><b>{point.y}</b></td></tr>',
+                footerFormat: '</table>',
+                shared: true,
+                useHTML: true
+            },
+            plotOptions: {
+                column: {
+                    pointPadding: 0.2,
+                    borderWidth: 0
+                }
+            },
+            series: [{
+                name: 'Tags',
+                data: [[${counter}]]
+            }]
+        });
+        let chart2 = Highcharts.chart('container2', {
+            chart: {
+                plotBackgroundColor: null,
+                plotBorderWidth: null,
+                plotShadow: false,
+                type: 'pie'
+            },
+            title: {
+                text: 'Status Pie Chart'
+            },
+            tooltip: {
+                pointFormat: '{series.name}: <b>{point.y}</b>'
+            },
+            accessibility: {
+                point: {
+                    valueSuffix: '%'
+                }
+            },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: true,
+                        format: '<b>{point.name}</b>: {point.percentage:.1f} %'
+                    }
+                }
+            },
+            series: [{
+                name: 'Status counter',
+                colorByPoint: true,
+                data: [[${data}]]
+            }]
+        });
+        let chart3 = Highcharts.chart('container3', {
+            chart: {
+                zoomType: 'xy'
+            },
+            title: {
+                text: 'Number of issues created '
+            },
+            xAxis: [{
+                categories: [[${days}]],
+                crosshair: true
+            }],
+            yAxis: [{ // Primary yAxis
+                labels: {
+                    format: '{value} total issues',
+                    style: {
+                        color: Highcharts.getOptions().colors[1]
+                    }
+                },
+                title: {
+                    text: 'Total issues',
+                    style: {
+                        color: Highcharts.getOptions().colors[1]
+                    }
+                }
+            }, { // Secondary yAxis
+                title: {
+                    text: 'issues',
+                    style: {
+                        color: Highcharts.getOptions().colors[0]
+                    }
+                },
+                labels: {
+                    format: '{value} issues',
+                    style: {
+                        color: Highcharts.getOptions().colors[0]
+                    }
+                },
+                opposite: true
+            }],
+            tooltip: {
+                shared: true
+            },
+            legend: {
+                layout: 'vertical',
+                align: 'left',
+                x: 120,
+                verticalAlign: 'top',
+                y: 100,
+                floating: true,
+                backgroundColor:
+                    Highcharts.defaultOptions.legend.backgroundColor || // theme
+                    'rgba(255,255,255,0.25)'
+            },
+            series: [{
+                name: 'Issues',
+                type: 'column',
+                yAxis: 1,
+                data: [[${issueCounter}]],
+                tooltip: {
+                    valueSuffix: ' issues'
+                }
 
-      let chart2 = Highcharts.chart('container2', {
-    chart: {
-        backgroundColor: '#f9f9f9',
-        plotBackgroundColor: null,
-        plotBorderWidth: null,
-        plotShadow: false,
-        type: 'pie'
-    },
-    title: {
-        text: 'Status Pie Chart'
-    },
-    tooltip: {
-        pointFormat: '{series.name}: <b>{point.y}</b>'
-    },
-    accessibility: {
-        point: {
-            valueSuffix: '%'
-        }
-    },
-    plotOptions: {
-        pie: {
-            allowPointSelect: true,
-            cursor: 'pointer',
-            dataLabels: {
-                enabled: true,
-                format: '<b>{point.name}</b>: {point.percentage:.1f} %'
-            }
-        }
-    },
-    series: [{
-        name: 'Status counter',
-        colorByPoint: true,
-        data: [[${try}]]
-    }]
-});
+            }, {
+                name: 'Total issues',
+                type: 'spline',
+                data: [[${cumulativeCounter}]],
+                tooltip: {
+                    valueSuffix: ' total issues'
+                }
+            }]
+
+        });
     });
-
 
 
 </script>
