--- a/demo/src/main/resources/templates/chart.html
+++ b/demo/src/main/resources/templates/chart.html
@@ -8,6 +8,8 @@
     <!-- Optional theme -->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
+    
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 </head>
 <body>
