--- a/demo/src/main/resources/templates/chart.html
+++ b/demo/src/main/resources/templates/chart.html
@@ -130,6 +130,7 @@
                 crosshair: true
             }],
             yAxis: [{ // Primary yAxis
+                allowDecimals : false,
                 labels: {
                     format: '{value} total issues',
                     style: {
@@ -143,6 +144,7 @@
                     }
                 }
             }, { // Secondary yAxis
+                allowDecimals : false,
                 title: {
                     text: 'issues',
                     style: {
